Added config for enabling docker repo in port 8085 in nexus service

--- a/db/apache-data/conf/httpd.conf
+++ b/db/apache-data/conf/httpd.conf
@@ -17,7 +17,11 @@ Listen 8083
 
     ProxyPass /nexus http://nexus:8081/nexus
     ProxyPassReverse /nexus http://nexus:8081/nexus
-
+    # For Docker Repos in Nexus 
+    ProxyPass /v2 http://nexus:8085/v2
+    ProxyPassReverse /v2 http://nexus:8085/v2
+    ProxyPass /v1 http://nexus:8085/v1
+    ProxyPassReverse /v1 http://nexus:8085/v1
 
     ProxyPass /sonarqube http://sonarqube:9000/sonarqube
     ProxyPassReverse /sonarqube http://sonarqube:9000/sonarqube
